results/SpecGenBench/0-shot/log-PassPillowBranch-2023_11_28_23_53_53.txt
class PassPillowBranch {
    //@ requires n > 0;
    //@ requires time >= 0;
    //@ ensures \result >= 1 && \result <= n;
    public int passPillow(int n, int time) {
        time = time % (n - 1) * 2;
        if (time < n) {
            //@ assert time < n;
            //@ assert time >= 0;
            //@ assert \result >= 1 && \result <= n;
            return time + 1;
        }
        //@ assert time >= n;
        //@ assert time < n * 2;
        //@ assert \result >= 1 && \result <= n;
        return n * 2 - time - 1;
    }
}
/home/max/Documents/JMLGPT/tmp/PassPillowBranch.java:10: error: A \result expression may not be in a assert clause
            //@ assert \result >= 1 && \result <= n;
                        ^
/home/max/Documents/JMLGPT/tmp/PassPillowBranch.java:10: error: A \result expression may not be in a assert clause
            //@ assert \result >= 1 && \result <= n;
                                        ^
/home/max/Documents/JMLGPT/tmp/PassPillowBranch.java:15: error: A \result expression may not be in a assert clause
        //@ assert \result >= 1 && \result <= n;
                    ^
/home/max/Documents/JMLGPT/tmp/PassPillowBranch.java:15: error: A \result expression may not be in a assert clause
        //@ assert \result >= 1 && \result <= n;
                                    ^
4 errors

